# idktfCTF

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  libtest_mw2.rlib  patch_001_teams_crate_typo.diff  patch_002_ratelimit_fixes.diff  patch_003_edition_2021.diff  patch_004_middleware_boxpin.diff
.github/workflows/: ci.yml
frontend/: package.json
frontend/.astro/: settings.json
frontend/public/: site.webmanifest
frontend/src/components/: tmp_Header.astro
frontend/src/layouts/: Layout.astro  tmp_Layout.astro
frontend/src/lib/: api.ts  tmp_api.ts
frontend/src/pages/: 403.astro  register.astro  scoreboard.astro  tmp_challenges.astro  tmp_index.astro  tmp_login.astro  tmp_profile.astro  tmp_rules.astro  tmp_teams.astro
frontend/src/pages/admin/: index.astro
frontend/src/pages/auth/: callback.astro
k8s/: namespace.yaml
k8s/api/: deployment.yaml  service.yaml
k8s/cloudflared/: config.yaml  deployment.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
migrations/: 001_initial.sql  tmp_001_initial.sql
src/: error.rs  main.rs  state.rs  tmp_main.rs  tmp_state.rs
src/auth/: ctftime.rs  login.rs  middleware.rs  mod.rs  ratelimit.rs  tmp_ctftime.rs  tmp_login.rs  tmp_middleware.rs  tmp_mod.rs  tmp_ratelimit.rs
src/auth/crypto/: jwt.rs  jwt_tests.rs  mod.rs  tmp_jwt.rs  tmp_jwt_tests.rs
src/db/: mod.rs  models.rs  tmp_mod.rs  tmp_models.rs
src/routes/: admin.rs  challenges.rs  health.rs  scoreboard.rs  teams.rs  tmp_admin.rs  tmp_challenges.rs  tmp_mod.rs  tmp_scoreboard.rs  tmp_teams.rs  tmp_users.rs  users.rs
